deployments/secure-istio/sample.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  hostNetwork: true
  containers:
  - name: test-container
    image: debian
    securityContext:
          capabilities:
            drop:
              - all
            add: ["NET_RAW", "SYS_ADMIN"]
    command: ["/bin/sh", "-c"]
    args:
      - while true; do
          echo "test";
          sleep 1;
        done
  terminationGracePeriodSeconds: 1
