deployments/secure-istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dudemo
spec:
  hosts:
  - "*"
  gateways:
  - dudemo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dudemo-nginx.dudemo-namespace.svc.cluster.local
        port:
          number: 4040
